force-app/main/default/objects/Support_ticket_action_item__c/Support_ticket_action_item__c.object-meta.xml
<CustomObject>
    <label>Support ticket action item</label>
    <nameField>
        <displayFormat>Action-{0000}</displayFormat>
        <label>Action item number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support ticket action items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>