force-app/main/default/objects/Support_ticket_action_item__c/fields/Action_description__c.field-meta.xml
<CustomField>
    <fullName>Action_description__c</fullName>
    <description>Describe the task</description>
    <label>Action description</label>
    <type>TextArea</type>
</CustomField>