force-app/main/default/objects/Support_ticket_action_item__c/fields/Action_status__c.field-meta.xml
<CustomField>
    <fullName>Action_status__c</fullName>
    <label>Action status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>