force-app/main/default/objects/Support_ticket_action_item__c/fields/Support_ticket__c.field-meta.xml
<CustomField>
    <fullName>Support_ticket__c</fullName>
    <label>Support ticket</label>
    <referenceTo>Support__c</referenceTo>
    <relationshipLabel>Support ticket action items</relationshipLabel>
    <relationshipName>Support_ticket_action_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>